Update latest template. Committing launch settings.

--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        @ViewData["Title"] - CCG API Web Template
+        @ViewData["Title"] - CCG CCT
     </title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div id="wb-sttl" class="col-md-5">
                         <a href="http://wet-boew.github.io/v4.0-ci/index-en.html">
-                            <span>CCG API Web Template</span>
+                            <span>CCG CCT</span>
                         </a>
                     </div>
                     <object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="~/themes-dist-4.0.25-theme-gcwu-fegc/theme-gcwu-fegc/assets/wmms.svg" aria-label="@Localizer["Symbol of the Government of Canada"]"></object>
