--- a/Web/Pages/Mockups/Compare_Position.cshtml
+++ b/Web/Pages/Mockups/Compare_Position.cshtml
@@ -11,7 +11,7 @@
 
     <h3>Administrative Services (AS)</h3>
     <div class="row col-md-12">
-        <form method="get" action="/IndexEnum">
+        <form method="get" action="#">
             <div class="form-group col-sm-2">
                 <label for="Level" class="control-label">@Localizer["Level"]</label>
                 <select data-val="true" id="Level" name="Level" class="form-control maxwidth">
