--- a/Web/Pages/Mockups/Compare_Position.cshtml
+++ b/Web/Pages/Mockups/Compare_Position.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model Web.Pages.Mockups.Compare_PositionModel
-
+@{
+    ViewData["Title"] = "Compare Position";
+}
 @inject IViewLocalizer Localizer
 
 
@@ -26,7 +28,7 @@
                 </select>
             </div>
 
-            <div class="form-group col-sm-9">
+            <div class="form-group col-sm-8">
                 <label for="Position" class="control-label">Position</label>
                 <select name="Position" id="Position" class="form-control maxwidth">
                     <option value="POS1">Officer (Business Services, Regulatory Coast Guard Planning, Investment, Project Planning & Control, Planning, Staff Management & Business Services) / Policy Analyst</option>
@@ -42,9 +44,22 @@
                     <option value="POS11">Manager Finance Admin. & Planning / Executive & Client Services Officer</option>
                 </select>
             </div>
+        
+            <div class="form-group col-sm-2">
+                <label for="Region" class="control-label">Region</label>
+                <select data-val="true" id="Level" name="Level" class="form-control maxwidth">
+                    <option value="Atlantic">Atlantic</option>
+                    <option value="Arctic">Arctic</option>
+                    <option value="CA">Central and Arctic</option>
+                    <option value="Western">Western</option>
+                    <option value="Headquarters">Headquarters</option>
+                    <option value="CCG College">CCG College</option>
+                    <option value="All">All</option>
+                </select>
+            </div>
         </form>
     </div>
-   
+
     <a class="btn btn-primary" href="/en/Mockups/Delta" role="button">Compare Positions</a>
 
 </section>
