--- a/Web/Pages/Mockups/Competency_Position_Search.cshtml
+++ b/Web/Pages/Mockups/Competency_Position_Search.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-sm-4 mrgn-bttm-md">
                 <figure>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="Similar_Positions">
                         <img src="~/Theresa/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["h4Text1"]</h4></figcaption>
@@ -21,15 +21,6 @@
                         <img src="~/Theresa/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["h4Text2"]</h4></figcaption>
-                </figure>
-            </div>
-
-            <div class="col-sm-4 mrgn-bttm-md">
-                <figure>
-                    <a href="#">
-                        <img src="~/Theresa/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                    </a>
-                    <figcaption><h4 class="text-center">@Localizer["h4Text3"]</h4></figcaption>
                 </figure>
             </div>
         </div>
