--- a/Web/Pages/Internal/CCGMember.cshtml
+++ b/Web/Pages/Internal/CCGMember.cshtml
@@ -20,7 +20,7 @@
         </figure>
     </div>
 </a>
-<a asp-page="">
+<a asp-page="AllPositions">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
             <img src="~/img/Internal/all-positions.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
