--- a/Web/Pages/CCGMember/Compare/SearchType.cshtml
+++ b/Web/Pages/CCGMember/Compare/SearchType.cshtml
@@ -6,7 +6,7 @@
 <a asp-page="">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
-            <img src="~/img/Internal/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+            <img src="~/img/CCGMember/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
             <strong>@Localizer["Similar"]</strong>
         </figure>
     </div>
@@ -14,7 +14,7 @@
 <a asp-page="AllObjective">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
-            <img src="~/img/Internal/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+            <img src="~/img/CCGMember/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
             <strong>@Localizer["Compare"]</strong>
         </figure>
     </div>
@@ -22,7 +22,7 @@
 <a asp-page="">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
-            <img src="~/img/Internal/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+            <img src="~/img/CCGMember/blank.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
         <strong>@Localizer["Available"]</strong>
         </figure>
     </div>
