--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -26,7 +26,7 @@
                 <h3 style="text-align:center">@Localizer["Student"]</h3>
             </div>
         </a>       
-        <a asp-page="">
+        <a asp-page="Candidate/Index">
             <div class="col-sm-4">
                 <img src="~/img/external candidates.png" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["ExternalCandidate"]</h3>
