Updated pages to Mockup

--- a/Web/Pages/Mockups/Compare_Position.cshtml
+++ b/Web/Pages/Mockups/Compare_Position.cshtml
@@ -9,7 +9,7 @@
 <section role="contentinfo">
 
     <h2>Select a level and position</h2>
-    <figure><img src="~/Theresa/img/Positions-full.jpg" alt="Photo of " class="img-responsive  mrgn-bttm-md" /></figure>
+    <figure><img src="~/img/Positions-full.jpg" alt="Photo of " class="img-responsive  mrgn-bttm-md" /></figure>
 
     <h3>Administrative Services (AS)</h3>
     <div class="row col-md-12">
@@ -44,7 +44,7 @@
                     <option value="POS11">Manager Finance Admin. & Planning / Executive & Client Services Officer</option>
                 </select>
             </div>
-        
+
             <div class="form-group col-sm-2">
                 <label for="Region" class="control-label">Region</label>
                 <select data-val="true" id="Level" name="Level" class="form-control maxwidth">
