--- a/Web/Pages/Mockups/Current_Position.cshtml
+++ b/Web/Pages/Mockups/Current_Position.cshtml
@@ -7,7 +7,7 @@
 
     <h2>@Localizer["h2Text"]</h2>
 
-    <figure><img src="~/Theresa/img/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /></figure>
+    <figure><img src="~/img/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /></figure>
 
     <h3>@Localizer["AdminAS"]</h3>
     <div class="row col-md-12">
