--- a/Web/Pages/Mockups/Competency_Position_Search.cshtml
+++ b/Web/Pages/Mockups/Competency_Position_Search.cshtml
@@ -9,7 +9,7 @@
             <div class="col-sm-4 mrgn-bttm-md">
                 <figure>
                     <a class="nav-link" href="Similar_Positions">
-                        <img src="~/Theresa/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <img src="~/img/similar.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["h4Text1"]</h4></figcaption>
                 </figure>
@@ -18,7 +18,7 @@
             <div class="col-sm-4 mrgn-bttm-md">
                 <figure>
                     <a href="All_Positions">
-                        <img src="~/Theresa/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <img src="~/img/compare.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["h4Text2"]</h4></figcaption>
                 </figure>
