--- a/Web/Pages/Mockups/External_Candidate.cshtml
+++ b/Web/Pages/Mockups/External_Candidate.cshtml
@@ -11,16 +11,16 @@
         <div class="row">
             <div class="col-sm-4">
                 <figure>
-                    <a class="nav-link" href="External_Offshore">
-                        <img src="~/Theresa/img/mcts.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    <a class="nav-link" href="#">
+                        <img src="~/img/shoreside.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">Shoreside Positions</h4></figcaption>
                 </figure>
             </div>
             <div class="col-sm-4">
                 <figure>
-                    <a href="External_Offshore">
-                        <img src="~/Theresa/img/Offshore.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    <a href="External_Seagoing">
+                        <img src="~/img/Seagoing.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">Seagoing Positions</h4></figcaption>
                 </figure>
@@ -28,3 +28,4 @@
         </div>
     </div>
 </section>
+
